--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
           <form>
             <div class="form-group">
               <label for="firstname"></label>
-              <input id="firstname" name="firstname" placeholder="First Name" type="text" class="form-control">
+              <input id="firstname" name="firstname" placeholder="First Name" type="text" class="form-control shadow-none">
               <span class="form-text text-error firstname_error d-none">First Name cannot be empty</span>
             </div>
 
             <div class="form-group">
               <label for="lastname"></label>
-              <input id="lastname" name="lastname" placeholder="Last Name" type="text" class="form-control">
+              <input id="lastname" name="lastname" placeholder="Last Name" type="text" class="form-control shadow-none">
               <span class="form-text text-error lastname_error d-none">Last Name cannot be empty</span>
             </div>
 
             <div class="form-group">
               <label for="email"></label>
-              <input id="email" name="email" placeholder="Email Address" type="text" class="form-control">
+              <input id="email" name="email" placeholder="Email Address" type="text" class="form-control shadow-none">
               <span class="form-text text-error email_error d-none">Looks like this is not an email</span>
             </div>
 
             <div class="form-group">
               <label for="password"></label>
-              <input id="password" name="password" placeholder="Password" type="text" class="form-control">
+              <input id="password" name="password" placeholder="Password" type="text" class="form-control shadow-none">
               <span class="form-text text-error password_error d-none">Password cannot be empty<br> and must be at least 5 characters long</span>
             </div>
 
