Update html & css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container-fluid">
-    <div class="flex-1">
+    <div class="flex-container">
       <div class="title">
         <h1 class="heading">Learn to code by watching others</h1>
 
@@ -65,10 +65,10 @@
         </div>
       </div>
     </div>
-    <!-- <div class="attribution">
+    <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      Coded by <a href="https://github.com/Beka93/intro-component-with-signup-form">Rebeka Frühwirth</a>.
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
