--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
   <div class="container-fluid">
     <div class="flex-container">
-      <div class="title">
+      <header class="title">
         <h1 class="heading">Learn to code by watching others</h1>
 
         <p class="text">See how experienced developers solve problems in real-time.
           Watching scripted tutorials is great,
           but understanding how developers think is invaluable.</p>
-      </div>
-      <div class="form-container">
+      </header>
+      <main class="form-container">
         <div class="form-group">
           <button name="submit" type="button" class="btn btn-tryit"><span class="span-1">Try it free 7 days</span> then
             $20/mo.
@@ -63,12 +63,12 @@
             </div>
           </form>
         </div>
-      </div>
+      </main>
     </div>
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/Beka93/intro-component-with-signup-form">Rebeka Frühwirth</a>.
-    </div>
+    </footer>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
